--- a/mywebserver.yml
+++ b/mywebserver.yml
@@ -9,7 +9,6 @@
 
 
   - name: i want to start webserver on ubuntu nodes
-    apt: 
+    service: 
       name: apache2
       state: started
-      
