--- a/mywebserver.yml
+++ b/mywebserver.yml
@@ -1,14 +1,18 @@
 --- 
 - hosts: all 
-  become: yes 
+  become: yes
+  gather_facts: yes 
   tasks: 
   - name: i want to install webserver on ubuntu nodes
     apt: 
       name: apache2
       state: present
+    when: ansible_os_family =="Debian"
 
 
   - name: i want to start webserver on ubuntu nodes
     service: 
       name: apache2
       state: started
+    when: ansible_os_family =="Debian"
+
