--- a/mywebserver.yml
+++ b/mywebserver.yml
@@ -5,27 +5,27 @@
   tasks: 
   - name: i want to install webserver on ubuntu nodes
     apt: 
-      name: apache2
+      name: "{{mywebpackforubuntu}}"
       state: present
     when: ansible_os_family =="Debian"
 
 
   - name: i want to start webserver on ubuntu nodes
     service: 
-      name: apache2
+      name: "{{mywebpackforubuntu}}"
       state: started
     when: ansible_os_family =="Debian"
 
 
-  - name: i want to install webserver on RedHat nodes
+  - name: i want to install webserver on amazon nodes
     ansible.builtin.dnf:
-      name: httpd
+      name: "{{mywebpackforamazon}}"
       state: present
-    when: ansible_os_family =="RedHat"
+    when: ansible_os_family =="amazon"
 
-  - name: i want to start webserver on RedHat nodes
+  - name: i want to start webserver on amazon nodes
     service: 
-      name: httpd
+      name: "{{mywebpackforamazon}}"
       state: started
-    when: ansible_os_family =="RedHat"
+    when: ansible_os_family =="amazon"
 
