--- a/installjava.yml
+++ b/installjava.yml
@@ -6,7 +6,7 @@
     apt:
       name: "{{myjavapackonubuntu}}"
       state: present 
-    when: ansible_os_family =="ubuntu" 
+    when: ansible_os_family =="Debian" 
 
 
   - name: install java on amazon node
