--- a/mywebserver.yml
+++ b/mywebserver.yml
@@ -17,15 +17,15 @@
     when: ansible_os_family =="Debian"
 
 
-  - name: i want to install webserver on amazon nodes
+  - name: i want to install webserver on RedHat nodes
     ansible.builtin.dnf:
       name: "{{mywebpackforamazon}}"
       state: present
-    when: ansible_os_family =="amazon"
+    when: ansible_os_family =="RedHat"
 
-  - name: i want to start webserver on amazon nodes
+  - name: i want to start webserver on RedHat nodes
     service: 
       name: "{{mywebpackforamazon}}"
       state: started
-    when: ansible_os_family =="amazon"
+    when: ansible_os_family =="RedHat"
 
