--- a/installjava.yml
+++ b/installjava.yml
@@ -1,16 +1,9 @@
---- 
-- hosts: mywebserver
+---
+- hosts: mywebserver 
   become: yes
   tasks: 
-  - name: install java on ubuntu node
-    apt:
+  - name: install java on ubuntu nodes
+    apt: 
       name: "{{myjavapackonubuntu}}"
       state: present 
-    when: ansible_os_family =="Debian" 
-
-
-  - name: install java on RedHat node
-    ansible.builtin.dnf:
-      name: "{{myjavapackonRedHat}}"
-      state: present 
-    when: ansible_os_family =="RedHat"
+    when: ansible_os_family =="Debian"  
