--- a/installjava.yml
+++ b/installjava.yml
@@ -4,6 +4,6 @@
   tasks: 
   - name: install java on ubuntu nodes
     apt: 
-      name: "{{myjavapackonubuntu}}"
+      name: "{{mywebpackforubuntu}}"
       state: present 
     when: ansible_os_family =="Debian"  
