--- a/installjava.yml
+++ b/installjava.yml
@@ -6,4 +6,4 @@
     apt: 
       name: "{{mywebpackforubuntu}}"
       state: present 
-    when: ansible_os_family =="Debian"  
+    when: ansible_os_family =="ubuntu"  
