--- a/mywebserver.yml
+++ b/mywebserver.yml
@@ -29,3 +29,7 @@
       state: started
     when: ansible_os_family =="RedHat"
 
+- name: restartwebserver
+    service: 
+      name: "{{mywebpackforubuntu}}"
+      state: restarted
